Add alarm timestamp tracking and alert frequency control
Introduced tracking for alarm timestamps to improve alert messaging, including times of occurrence and resolution. Additionally, implemented configurable alert frequency control based on data significance to avoid frequent redundant alerts.